<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference

        android:defaultValue="@string/pref_default_location_key"
        android:inputType="number"
        android:key="@string/pref_location_key"
        android:maxLength="10"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_location_key" />
    <ListPreferenceA
        android:defaultValue="metric"
        android:entries="@array/pref_unit_type_titles"
        android:entryValues="@array/pref_unit_type_values"
        android:key="@string/pref_unit_key"
        android:title="@string/pref_title_unit_type" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
</PreferenceScreen>
